# spellchecker-trie

./: CMakeLists.txt  CheckerRunner.cpp  Makefile  README  README.md  Trie.cpp  Trie.h  checker.cpp  checker.h  checker.out  testhw  words-100000-50-1.csv  words-100000-50-2.csv
Testing/: CheckerRunner.h  words-100000-50-3.csv  words-100000-50-4.csv  words-100000-50-5.csv
